第一版功能完成

--- a/SwiftSmileRating/Base.lproj/Main.storyboard
+++ b/SwiftSmileRating/Base.lproj/Main.storyboard
@@ -35,7 +35,10 @@
                                         <integer key="value" value="100"/>
                                     </userDefinedRuntimeAttribute>
                                     <userDefinedRuntimeAttribute type="number" keyPath="lineWidth">
-                                        <real key="value" value="10"/>
+                                        <real key="value" value="5"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="currentScore">
+                                        <integer key="value" value="80"/>
                                     </userDefinedRuntimeAttribute>
                                 </userDefinedRuntimeAttributes>
                             </view>
